# __dp-2022

./: CMakeLists.txt  readme.md
assignment-1-introduction/: main.c
assignment-3-password-cracking/: main.c
assignment-4-monte-carlo/: main.c
lab-2-parallel-sort/: main.c  task
lab-2-parallel-sort/resources/: numbers
lab-3-password-cracking/: main.c  task
